# MARFF

gazebo_simulation/: CMakeLists.txt  package.xml
gazebo_simulation/config/: controllers.yaml
gazebo_simulation/launch/: gazebo_firefighter.launch.py
gazebo_simulation/urdf/: firefighter_robot_gazebo.urdf.xacro
gazebo_simulation/worlds/: empty.world
rviz_simulation/: CMakeLists.txt  package.xml
rviz_simulation/config/: view_robot.rviz
rviz_simulation/launch/: view_robot.launch.py
rviz_simulation/meshes/visual/: ball_storage.stl  ballstorage.dae
rviz_simulation/urdf/: firefighter_robot.urdf.xacro
